Registe Module DOne

--- a/FrontEnd/View/index.html
+++ b/FrontEnd/View/index.html
@@ -359,7 +359,7 @@
       };
     </script>
     <script>
-      const URL = "https://stereobatic-binder.000webhostapp.com";
+      const URL = "http://localhost/TERMWORK/BackEnd/APIS/Auth/Register/";
 
       /* === Change Password Form === */
       const ChangePass = () => {
