--- a/FrontEnd/View/index.html
+++ b/FrontEnd/View/index.html
@@ -361,8 +361,32 @@
     <script>
       const URL = "http://localhost/TERMWORK/BackEnd/APIS/Auth/Register/";
 
+      const resetPassword = (event, email) => {
+        event.preventDefault();
+        let password = event.target.password.value;
+        let cpassword = event.target.cpassword.value;
+        if (password === cpassword) {
+          $.ajax({
+            url: `http://localhost/TERMWORK/BackEnd/APIS/Auth/ForgotPassword/ResetPass.php`,
+            type: "POST",
+            data: {
+              email: email,
+              password: password,
+            },
+            dataType: "json",
+            success: function (data) {
+              if (data.message === "OTP Verification Done..") ChangePass(email);
+              else alert("wrong OTP");
+            },
+            error: function (xhr, textStatus, errorThrown) {
+              console.error("AJAX request failed:", textStatus, errorThrown);
+            },
+          });
+        } else alert("password mitsmatch..!!");
+      };
       /* === Change Password Form === */
-      const ChangePass = () => {
+
+      const ChangePass = (email) => {
         Swal.fire({
           html: `
           <div class=" bg-white rounded-lg shadow dark:border dark:bg-neutral-800 dark:border-neutral-700 p-4" style="width:450px">
@@ -373,10 +397,10 @@
             >
               Forgot Password
             </h1>
-            <form class="space-y-4 md:space-y-6 w-96" action="#"  >
+            <form class="space-y-4 md:space-y-6 w-96" action="#" onsubmit="resetPassword(event,'${email}')" >
               <div>
                 <label for="email" class="block mb-2 text-sm font-medium text-neutral-900 dark:text-white">Your email</label>
-                <input type="email" name="email" id="email" class="bg-neutral-50 border border-neutral-300 text-neutral-900 sm:text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 dark:bg-neutral-700 dark:border-neutral-600 dark:placeholder-neutral-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@company.com" required="">
+                <input type="email" name="email" id="email" value="${email}" class="bg-neutral-50 border border-neutral-300 text-neutral-900 sm:text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 dark:bg-neutral-700 dark:border-neutral-600 dark:placeholder-neutral-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@company.com" required="" desabaled>
               </div>
               <div>
                 <label for="password" class="block mb-2 text-sm font-medium text-neutral-900 dark:text-white">Your email</label>
@@ -398,19 +422,21 @@
         });
       };
       /* === Verify OTP ===*/
-      const verify = (event) => {
+      const verify = (event, email) => {
         event.preventDefault();
         const otpInput = event.target.otp.value;
-        console.log(otpInput);
 
         $.ajax({
-          url: `${URL}/PHP/Verify_OTP.php`,
+          url: `http://localhost/TERMWORK/BackEnd/APIS/Auth/ForgotPassword/Verify_OTP.php`,
           type: "POST",
-          data: { UserOTP: otpInput },
+          data: {
+            email: email,
+            otp: otpInput,
+          },
           dataType: "json",
           success: function (data) {
-            console.log(data);
-            ChangePass();
+            if (data.message === "OTP Verification Done..") ChangePass(email);
+            else alert("wrong OTP");
           },
           error: function (xhr, textStatus, errorThrown) {
             console.error("AJAX request failed:", textStatus, errorThrown);
@@ -419,7 +445,7 @@
       };
 
       /* === OTP fill Form === */
-      const Verification = () => {
+      const Verification = (email) => {
         Swal.fire({
           html: `
           <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
@@ -439,7 +465,7 @@
               >we will send One Time Password on <br>
               <strong class="text-center leading-7">abcx@ffdfd.csc</strong>,<br />
               to proceed fill the otp</h2>
-            <form class="space-y-4 md:space-y-6" action="#" onsubmit="verify(event)">
+            <form class="space-y-4 md:space-y-6" action="#" onsubmit="verify(event,'${email}')">
               <div class="h-full">
                 <div class="w-full flex pt-12">
                   <div
@@ -507,14 +533,13 @@
         event.preventDefault();
         const email = event.target.email.value;
         $.ajax({
-          url: `${URL}/PHP/SendOTP.php`,
+          url: `http://localhost/TERMWORK/BackEnd/APIS/Auth/ForgotPassword/verifyEmail.php`,
           type: "POST",
-          data: { EMAIL: email },
+          data: { email: email },
           dataType: "json",
           success: function (data) {
             if (data.status === "success") {
-              console.log(data);
-              Verification();
+              Verification(email);
             }
           },
           error: function (xhr, textStatus, errorThrown) {
