--- a/FrontEnd/View/index.html
+++ b/FrontEnd/View/index.html
@@ -369,14 +369,14 @@
           $.ajax({
             url: `http://localhost/TERMWORK/BackEnd/APIS/Auth/ForgotPassword/ResetPass.php`,
             type: "POST",
-            data: {
+            data: JSON.stringify({
               email: email,
               password: password,
-            },
+              confirm_password: cpassword,
+            }),
             dataType: "json",
             success: function (data) {
-              if (data.message === "OTP Verification Done..") ChangePass(email);
-              else alert("wrong OTP");
+              alert(data.message);
             },
             error: function (xhr, textStatus, errorThrown) {
               console.error("AJAX request failed:", textStatus, errorThrown);
@@ -399,11 +399,11 @@
             </h1>
             <form class="space-y-4 md:space-y-6 w-96" action="#" onsubmit="resetPassword(event,'${email}')" >
               <div>
-                <label for="email" class="block mb-2 text-sm font-medium text-neutral-900 dark:text-white">Your email</label>
+                <label for="email" class="block mb-2 text-sm font-medium text-neutral-900 dark:text-white">Email</label>
                 <input type="email" name="email" id="email" value="${email}" class="bg-neutral-50 border border-neutral-300 text-neutral-900 sm:text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 dark:bg-neutral-700 dark:border-neutral-600 dark:placeholder-neutral-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@company.com" required="" desabaled>
               </div>
               <div>
-                <label for="password" class="block mb-2 text-sm font-medium text-neutral-900 dark:text-white">Your email</label>
+                <label for="password" class="block mb-2 text-sm font-medium text-neutral-900 dark:text-white">Password</label>
                 <input type="password" name="password" id="password" class="bg-neutral-50 border border-neutral-300 text-neutral-900 sm:text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 dark:bg-neutral-700 dark:border-neutral-600 dark:placeholder-neutral-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="******" required="">
               </div>
               <div>
@@ -429,14 +429,14 @@
         $.ajax({
           url: `http://localhost/TERMWORK/BackEnd/APIS/Auth/ForgotPassword/Verify_OTP.php`,
           type: "POST",
-          data: {
+          data: JSON.stringify({
             email: email,
             otp: otpInput,
-          },
+          }),
           dataType: "json",
           success: function (data) {
             if (data.message === "OTP Verification Done..") ChangePass(email);
-            else alert("wrong OTP");
+            else console.log(data);
           },
           error: function (xhr, textStatus, errorThrown) {
             console.error("AJAX request failed:", textStatus, errorThrown);
@@ -535,10 +535,10 @@
         $.ajax({
           url: `http://localhost/TERMWORK/BackEnd/APIS/Auth/ForgotPassword/verifyEmail.php`,
           type: "POST",
-          data: { email: email },
+          data: JSON.stringify({ email: email }),
           dataType: "json",
           success: function (data) {
-            if (data.status === "success") {
+            if (data.success === true) {
               Verification(email);
             }
           },
