--- a/FrontEnd/View/index.html
+++ b/FrontEnd/View/index.html
@@ -376,7 +376,12 @@
             }),
             dataType: "json",
             success: function (data) {
-              alert(data.message);
+              Swal.fire({
+                icon: "success",
+                title: data.message,
+                showConfirmButton: false,
+                timer: 1500,
+              });
             },
             error: function (xhr, textStatus, errorThrown) {
               console.error("AJAX request failed:", textStatus, errorThrown);
