--- a/FrontEnd/View/index.html
+++ b/FrontEnd/View/index.html
@@ -34,6 +34,10 @@
     <!-- JQuery-->
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 
+    <!-- Cookie Handler -->
+    <script src="./View/assets/js/Auth/COOKIE/setCookie.js"></script>
+    <script src="./View/assets/js/Auth/COOKIE/getCookie.js"></script>
+
     <!--Custom Js-->
     <script src="./View/assets/js/main.js"></script>
 
