--- a/FrontEnd/View/assets/stylesheet/customCss.css
+++ b/FrontEnd/View/assets/stylesheet/customCss.css
@@ -54,3 +54,16 @@
   .text-blue-600 {
       background: "#2563eb";
   }
+
+  .active-tag{
+    box-shadow: 1px 1px rgba(0, 0, 0, 0.3) !important;
+        background: rgba(0, 0, 0, 0.5) !important;
+        min-width: max-content !important;
+        max-height: max-content !important;
+  }
+  .tag{
+    box-shadow: 1px 1px rgba(0, 0, 0, 0.3);
+        background: rgba(0, 0, 0, 0.5);
+        min-width: max-content;
+        max-height: max-content;
+  }
